Hmm. Seems that behaves weirdly.